[package]
name = "stackoff"
version = "0.1.0"
authors = ["liangjs <liangjs@pku.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

num = "0.4.0"
petgraph = "0.6.0"
dflow = { git = "https://github.com/liangjs/dflow/" }